syntax = "proto3";
option java_multiple_files = true;
package com.eduardo.grpc;

message WorkspaceRequest {
    string type = 1;
    int32 size = 2;
}

message WorkspaceResponse {
    string taskId = 1;
}

/*
this is just a example on how to document

*/
service WorkspaceService {
    rpc createWorkspace(WorkspaceRequest) returns (WorkspaceResponse);
}
